crates/katex/tests/snapshots/katex_spec__error_render_double_superscript.snap
---
source: crates/katex/tests/katex_spec.rs
expression: normalized
---
<span class="katex-error" style="color: #cc0000" title="KaTeX parse error: Double superscript at position 4: 2^2^̲2">2^2^2</span>
