crates/katex/tests/snapshots/katex_spec__href_allow_explicit_protocol.snap
---
source: crates/katex/tests/katex_spec.rs
assertion_line: 3682
expression: "format!(\"{:#?}\", parsed)"
---
[
    Href(
        ParseNodeHref {
            mode: Math,
            loc: None,
            href: "ftp://x",
            body: [
                OrdGroup(
                    ParseNodeOrdGroup {
                        mode: Math,
                        loc: None,
                        body: [
                            MathOrd(
                                ParseNodeMathOrd {
                                    mode: Math,
                                    loc: None,
                                    text: Owned(
                                        "f",
                                    ),
                                },
                            ),
                            MathOrd(
                                ParseNodeMathOrd {
                                    mode: Math,
                                    loc: None,
                                    text: Owned(
                                        "o",
                                    ),
                                },
                            ),
                            MathOrd(
                                ParseNodeMathOrd {
                                    mode: Math,
                                    loc: None,
                                    text: Owned(
                                        "o",
                                    ),
                                },
                            ),
                        ],
                        semisimple: None,
                    },
                ),
            ],
        },
    ),
]
