crates/katex/tests/snapshots/katex_spec__href_disallow_protocol.snap
---
source: crates/katex/tests/katex_spec.rs
assertion_line: 3703
expression: "format!(\"{:#?}\", parsed)"
---
[
    Color(
        ParseNodeColor {
            mode: Math,
            loc: None,
            color: "#cc0000",
            body: [
                Text(
                    ParseNodeText {
                        mode: Math,
                        loc: None,
                        body: [
                            TextOrd(
                                ParseNodeTextOrd {
                                    mode: Text,
                                    loc: None,
                                    text: Owned(
                                        "\\",
                                    ),
                                },
                            ),
                            TextOrd(
                                ParseNodeTextOrd {
                                    mode: Text,
                                    loc: None,
                                    text: Owned(
                                        "h",
                                    ),
                                },
                            ),
                            TextOrd(
                                ParseNodeTextOrd {
                                    mode: Text,
                                    loc: None,
                                    text: Owned(
                                        "r",
                                    ),
                                },
                            ),
                            TextOrd(
                                ParseNodeTextOrd {
                                    mode: Text,
                                    loc: None,
                                    text: Owned(
                                        "e",
                                    ),
                                },
                            ),
                            TextOrd(
                                ParseNodeTextOrd {
                                    mode: Text,
                                    loc: None,
                                    text: Owned(
                                        "f",
                                    ),
                                },
                            ),
                        ],
                        font: None,
                    },
                ),
            ],
        },
    ),
]
